Fixed up scrolling on mobile version

--- a/client/src/desktop/styling/graphBox.css
+++ b/client/src/desktop/styling/graphBox.css
@@ -2,7 +2,6 @@
     border-style: solid;
     border-width: 1px;
     border-radius: 1rem;
-    border-color: #494949;
     min-width: 900px;
 }
 
